# LoanAnalysis

./: .gitignore  PROGRESS.md  README.md  pyproject.toml
src/loan_analysis/: __main__.py  calculator.py  cli.py  core.py
src/loan_analysis.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
